--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 }
 
 .section{
-	/*display: inline-block;*/
 	float:left;
 	width: 25%;
 	color: #DDD;
@@ -23,3 +22,7 @@
 	display: inline;
 }
 
+.form-container{
+	margin: 0 auto;
+	text-align: center;
+}
