--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,9 @@
 .revealed .name {
 	transform: translateY(60%) rotateY(0deg);	
 }
+
+.correct{
+	background-color: lime;
+	border-color: darkgreen;
+}
+
